# selcom-apigw-client-python

./: README.md  pyproject.toml
src/selcom_apigw_client/: apigwClient.py
