[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "selcom_apigw_client"
version = "1.0.1"
authors = [
  { name="Dev", email="dev@selcom.net" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",]

[project.urls]
"Homepage" = "https://developers.selcommobile.com/"
